More functions, more documentation, more tests

--- a/dist.ini
+++ b/dist.ini
@@ -8,6 +8,10 @@ copyright_year   = 2012
 :version = 0.032
 AutoMetaResources.bugtracker.rt = 0
 AutoMetaResources.bugtracker.github = user:dagolden
+stopwords = Breno
+stopwords = GARU
+stopwords = Olivera
+stopwords = ZEFRAM
 
 [PruneFiles]
 match = ^devel/*
