--- a/dist.ini
+++ b/dist.ini
@@ -10,6 +10,7 @@ AutoMetaResources.bugtracker.rt = 0
 AutoMetaResources.bugtracker.github = user:dagolden
 stopwords = Breno
 stopwords = GARU
+stopwords = McMurdo
 stopwords = Olivera
 stopwords = ZEFRAM
 
