use ShareDir::Tarball for share files

--- a/dist.ini
+++ b/dist.ini
@@ -4,6 +4,8 @@ license = Apache_2_0
 copyright_holder = David Golden
 copyright_year   = 2012
 
+[ShareDir::Tarball]
+
 [@DAGOLDEN]
 :version = 0.032
 AutoMetaResources.bugtracker.rt = 0
